<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CurrencyChooserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_in_label" />

            <RadioGroup
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton android:id="@+id/from_dollars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollars_symbol"
                    android:onClick="updateCurrencySelector">
                </RadioButton>

                <RadioButton android:id="@+id/from_euros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euros_symbol"
                    android:onClick="updateCurrencySelector">
                </RadioButton>

                <RadioButton android:id="@+id/from_pounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pounds_symbol"
                    android:onClick="updateCurrencySelector">
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_out_label"/>

            <RadioGroup
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton android:id="@+id/to_dollars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollars_symbol"
                    android:onClick="updateCurrencySelector">
                </RadioButton>

                <RadioButton android:id="@+id/to_euros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euros_symbol"
                    android:onClick="updateCurrencySelector">
                </RadioButton>

                <RadioButton android:id="@+id/to_pounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pounds_symbol"
                    android:onClick="updateCurrencySelector">
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/currency_chooser_button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_chooser_button_label"
            android:enabled="false"
            android:onClick="getRate"/>

    </LinearLayout>


</LinearLayout>